Update style and index

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="icon" type="image/png" href="favicon.png">
   
     <!-- Custom styles -->
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="public/css/app.style.css" rel="stylesheet" type="text/css" />
   </head>
   
   <body>
 
     <header class="header">
-      <div class="block-brandh">
+      <div class="block-brand">
         <img width="134" height="143" src="public/src/logo.png" alt="Software Engineer">
       </div>
       <h1>Software Engineer</h1>
